[vsu/scripts/ | detections/calibrarton_img.jpg] added

--- a/visual_servo_uav_pkg/CMakeLists.txt
+++ b/visual_servo_uav_pkg/CMakeLists.txt
@@ -169,6 +169,7 @@ include_directories(
    scripts/single_detection.py
    scripts/img_server.py
    scripts/remote_ctrl_interface.py
+   scripts/frame_saver.py
    
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
